// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveLabel should correctly render for RTL service 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  color: #006666;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  background: radial-gradient(circle, transparent 53%, #006666 53.5%, #006666 54%);
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  position: relative;
  -webkit-transform: translate(0, 12%);
  -moz-transform: translate(0, 12%);
  -ms-transform: translate(0, 12%);
  transform: translate(0, 12%);
}

.emotion-1:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background: radial-gradient(circle, #006666 37%, #006666 37.5%,transparent 38%);
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-1:before {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
  }
}

.emotion-1:after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  color: #006666;
  display: inline-block;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      />
    </span>
    <span
      class="emotion-2"
      dir="rtl"
    >
      مباشر 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with English live text 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  color: #006666;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  background: radial-gradient(circle, transparent 53%, #006666 53.5%, #006666 54%);
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  position: relative;
  -webkit-transform: translate(0, 12%);
  -moz-transform: translate(0, 12%);
  -ms-transform: translate(0, 12%);
  transform: translate(0, 12%);
}

.emotion-1:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background: radial-gradient(circle, #006666 37%, #006666 37.5%,transparent 38%);
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-1:before {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
  }
}

.emotion-1:after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  color: #006666;
  display: inline-block;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      />
    </span>
    <span
      aria-hidden="true"
      class="emotion-2"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="emotion-3"
      lang="en-GB"
    >
      Live
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with English live text and children 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  color: #006666;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  background: radial-gradient(circle, transparent 53%, #006666 53.5%, #006666 54%);
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  position: relative;
  -webkit-transform: translate(0, 12%);
  -moz-transform: translate(0, 12%);
  -ms-transform: translate(0, 12%);
  transform: translate(0, 12%);
}

.emotion-1:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background: radial-gradient(circle, #006666 37%, #006666 37.5%,transparent 38%);
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-1:before {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
  }
}

.emotion-1:after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  color: #006666;
  display: inline-block;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      />
    </span>
    <span
      aria-hidden="true"
      class="emotion-2"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="emotion-3"
      lang="en-GB"
    >
      Live, 
    </span>
     this is a headline 
  </span>
</div>
`;

exports[`LiveLabel should render correctly with custom offscreen text 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  color: #006666;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  background: radial-gradient(circle, transparent 53%, #006666 53.5%, #006666 54%);
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  position: relative;
  -webkit-transform: translate(0, 12%);
  -moz-transform: translate(0, 12%);
  -ms-transform: translate(0, 12%);
  transform: translate(0, 12%);
}

.emotion-1:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background: radial-gradient(circle, #006666 37%, #006666 37.5%,transparent 38%);
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-1:before {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
  }
}

.emotion-1:after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  color: #006666;
  display: inline-block;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      />
    </span>
    <span
      aria-hidden="true"
      class="emotion-2"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="emotion-3"
      lang="en-GB"
    >
      Watch Live
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with localised live text 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  color: #006666;
  border-radius: 50%;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  background: radial-gradient(circle, transparent 53%, #006666 53.5%, #006666 54%);
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  position: relative;
  -webkit-transform: translate(0, 12%);
  -moz-transform: translate(0, 12%);
  -ms-transform: translate(0, 12%);
  transform: translate(0, 12%);
}

.emotion-1:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background: radial-gradient(circle, #006666 37%, #006666 37.5%,transparent 38%);
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-1:before {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s 3;
  }
}

.emotion-1:after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  color: #006666;
  display: inline-block;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      />
    </span>
    <span
      class="emotion-2"
      dir="ltr"
    >
      As E Dey Happen 
    </span>
  </span>
</div>
`;
